@@ -1628,11 +1628,23 @@ std::shared_ptr<LogicalView> ClusterInfo::getView(DatabaseID const& databaseID,
     return nullptr;
   }
 
-  READ_LOCKER(readLocker, _planProt.lock);
-  auto const view = lookupView(_plannedViews, databaseID, viewID);
+  {
+    READ_LOCKER(readLocker, _planProt.lock);
+    auto const view = lookupView(_plannedViews, databaseID, viewID);
 
-  if (view) {
-    return view;
+    if (view) {
+      return view;
+    }
+  }
+
+  Result res = fetchAndWaitForPlanVersion(std::chrono::seconds(10)).get();
+  if (res.ok()) {
+    READ_LOCKER(readLocker, _planProt.lock);
+    auto const view = lookupView(_plannedViews, databaseID, viewID);
+
+    if (view) {
+      return view;
+    }
   }
 
   LOG_TOPIC("a227e", DEBUG, Logger::CLUSTER)
