@@ -1,6 +1,8 @@
 v3.7.2 (XXXX-XX-XX)
 -------------------
 
+* Fixed regression with view use-after-create in cluster (BTS-137).
+
 * Slightly improved the performance of some k-shortest-path queries.
 
 
